bulk-updates-dec4

--- a/content/connectivity-status.ipynb
+++ b/content/connectivity-status.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "id": "c97d132d",
+      "id": "6ec28c95",
       "execution_count": null,
       "outputs": []
     },
@@ -25,7 +25,7 @@
         "\n",
         "## Connectivity Status Assessment {-}\n",
         "\n",
-        "The planning team identified two Key Ecological Attributes (KEAs) to assess the current connectivity status of the watershed for each focal species – available spawning habitat and available rearing habitat (@tbl-connectivity). KEAs are the key aspects of anadromous salmon habitat that are being targeted by this WCRP. For each KEA, an associated indicator was assigned to measure the status of that KEA. The connectivity status indicators were used to establish goals to improve key habitat connectivity over time and is the baseline against which progress is tracked over time.\n",
+        "The planning team identified two Key Ecological Attributes (KEAs) to assess the current connectivity status of the watershed for each focal species: available spawning habitat and available rearing habitat (@tbl-connectivity). KEAs are the key aspects of anadromous salmon habitat that are being targeted by this WCRP. For each KEA, an associated indicator was assigned to measure the status of that KEA. The connectivity status indicators were used to establish goals to improve key habitat connectivity over time and is the baseline against which progress is tracked over time.\n",
         "\n",
         "The current connectivity status was estimated using three spatial models:\n",
         "\n",
@@ -35,7 +35,7 @@
         "\n",
         "3.\tConnectivity model: A layer of known or modelled structures was overlaid  on the key habitat results. Structures  with unknown passability were treated as a full barrier until confirmed passable by either local knowledge, desktop review, or field assessment. Watershed connectivity was estimated by calculating the amount of key habitat that is connected to the ocean (i.e., not fragmented by human-made barriers). Key habitat with no structures or only passable structures downstream was considered connected. Key habitat upstream of full, partial, or potential barriers was considered disconnected. All connected habitat was summed and divided by the total amount of key habitat in the watershed to arrive at the KEA indicators. Detailed methods for the connectivity model can be found in [Appendix C](data-methods.qmd)\n"
       ],
-      "id": "c96c01d8"
+      "id": "bdfd8f6e"
     },
     {
       "cell_type": "code",
@@ -57,9 +57,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the CWF Barrier Prioritization Model output, which is current as of December 2024.\n"
+        "**Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the connectivity model output, which is current as of December 2024.\n"
       ],
-      "id": "798415fe"
+      "id": "c57880ea"
     },
     {
       "cell_type": "code",
@@ -71,7 +71,7 @@
         "df = conn_table.make_assess_table(\"Andromous Salmon\", \"Available Rearing Habitat\", \"% of total rearing habitat\", 50, 75, 90, api.connect_rear)\n",
         "df\n"
       ],
-      "id": "013cd906",
+      "id": "519c88d4",
       "execution_count": null,
       "outputs": []
     },
@@ -79,12 +79,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the CWF Structure Prioritization Model output, which is current as of December 2024. \n",
+        "**Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the connectivity model output, which is current as of December 2024. \n",
         "\n",
         "\n",
         "## Goals {-}\n"
       ],
-      "id": "5dd94cfe"
+      "id": "0087cf61"
     },
     {
       "cell_type": "code",
