--- a/content/work-planning.qmd
+++ b/content/work-planning.qmd
@@ -2,7 +2,7 @@
 
 ## Annual Progress Update {-}
 
-One priority barrier for rehabilitation in the Bulkley watershed was removed on McDowell Creek at Woodmere Nursery in summer 2023. This crossing was replaced with a clearspan bridge and opens up approximately 200 m of seasonal off-channel habitat for salmonids during periods of high flow. The Ministry of Transportation and Infrastructure has been working with local partners to advance designs for barriers on Trib to Buck Creek, Helps Creek, Thompson Creek and Gramophone Creek. The Office of the Wet’suwet’en has hired a part-time staff to help with fish passage coordination in the Bulkley watershed. In addition, efforts have been made by CWF and local partners to build a campaign around Station Creek, to convince the BC government to invest in an appropriate crossing at Highway 16.
+One priority barrier for rehabilitation in the Bulkley River watershed was removed on McDowell Creek at Woodmere Nursery in summer 2023. This crossing was replaced with a clearspan bridge and opens up approximately 200 m of seasonal off-channel habitat for salmonids during periods of high flow. The Ministry of Transportation and Infrastructure has been working with local partners to advance designs for barriers on Trib to Buck Creek, Helps Creek, Thompson Creek and Gramophone Creek. The Office of the Wet’suwet’en has hired a part-time staff to help with fish passage coordination in the Bulkley watershed. In addition, efforts have been made by CWF and local partners to build a campaign around Station Creek, to convince the BC government to invest in an appropriate crossing at Highway 16.
 
 ## Annual Work Plan
 ```{r keyact, echo = FALSE, results = 'asis'}
@@ -23,7 +23,7 @@ ft
 
 ## Operational Plan {-}
 
-The operational plan represents a preliminary exercise undertaken by the planning team to identify the potential leads, potential participants, and estimated cost for the implementation of each action in the Bulkley River watershed. The table below summarizes individuals, groups, or organizations that the planning team felt could lead or participate in the implementation of the plan and should be interpreted as the first step in on-going planning and engagement to develop more detailed and sophisticated action plans for each entry in the table. The individuals, groups, and organizations listed under the "Lead(s)" or "Potential Participants" columns are those that provisionally expressed interest in participating in one of those roles or were suggested by the planning team for further engagement (denoted in bold), for those that are not members of the planning team. The leads, participants, and estimated costs in the operational plan are not binding nor an official commitment of resources, but rather provide a roadmap for future coordination and engagement to work towards implementation of the WCRP.
+The operational plan represents a preliminary exercise undertaken by the planning team to identify the potential leads, potential participants, and estimated cost for the implementation of each action in the Bulkley River watershed. @tbl-opplan summarizes individuals, groups, or organizations that the planning team felt could lead or participate in the implementation of the plan and should be interpreted as the first step in on-going planning and engagement to develop more detailed and sophisticated action plans for each entry in the table. The individuals, groups, and organizations listed under the "Lead(s)" or "Potential Participants" columns are those that provisionally expressed interest in participating in one of those roles or were suggested by the planning team for further engagement (denoted in bold), for those that are not members of the planning team. The leads, participants, and estimated costs in the operational plan are not binding nor an official commitment of resources, but rather provide a roadmap for future coordination and engagement during WCRP implementation.
 
 ```{python echo=FALSE}
 #| label: tbl-S1
