--- a/references.bib
+++ b/references.bib
@@ -142,13 +142,6 @@
   publisher = "UBC"
 }
 
-@book{Hoopes1972,
-  title  = "Selection of Spawning Sites by Sockeye Salmon in Small Streams",
-  author = "Hoopes, D Y",
-  year   =  1972,
-  publisher = "Fishery Bulletin"
-}
-
 @book{DFO1991-tl,
   title  = "Fish habitat inventory and information program - stream summary information.",
   author = "DFO",
@@ -162,6 +155,7 @@
   year   =  2019,
   address = "http://gitxsan.ca/release-gitxsan-chiefs-extend-fishing-ban-to-2020-season-urge-canada-bc-and-flnro-to-step-up/"
 }
+ 
 
 @book{Irvine2018,
   title  = "Analysis and priority identification of existing fish passage data: Bulkley River",
@@ -173,9 +167,8 @@
 @book{Irvine2021,
   title  = "Bulkley River and Morice River Watershed Groups Fish Passage Restoration Planning",
   author = "Irvine, A",
-  prepared = "Prepared on behalf of Society for Ecosystem Restoration Northern BC",
   year   =  2021,
-  address = "http://a100.gov.bc.ca/pub/acat/public/viewReport.do?reportId=56648"
+  address = "https://www.newgraphenvironment.com/fish_passage_bulkley_2020_reporting/Bulkley.pdf"
 }
 
 @article{Mazany-Wright2021-rz,
@@ -184,18 +177,7 @@
   author  = "Mazany-Wright, N and Norris, S M and Lapointe, N W R and
              Rebellato, B",
   journal = "Canadian Wildlife Federation",
-  volume = "a",
-  year    =  2021
-}
-
-@article{Mazany-Wright2021-do,
-  title   = "B.C. Fish Passage Restoration Initiative Target Watershed Selection
-             Process: Technical Documentation",
-  author  = "Mazany-Wright, N and Norris, S M and Lapointe, N W R and
-             Rebellato, B",
-  journal = "Canadian Wildlife Federation",
-  volume = "b",
-  year   =  2021
+  year    =  2021a
 }
 
 @article{Mazany-Wright2021-hs,
@@ -204,8 +186,17 @@
   author  = "Mazany-Wright, N and Noseworthy, J and Sra, S and Norris, S M and
              Lapointe, N W",
   journal = "Canadian Wildlife Federation",
-  year    =  2021
+  year    =  2021c
 }
+
+@article{Mazany-Wright2021-do,
+  title   = "B.C. Fish Passage Restoration Initiative
+          Target Watershed Selection Process: Technical Documentation",
+  author  = "Mazany-Wright, N., S. M. Norris, N. W. R. Lapointe, and B. Rebellato",
+  journal = "Canadian Wildlife Federation",
+  year    =  2021b
+}
+
 
 @article{Mccarthy2015,
   title  = "2015 Inventory of High Priority Culverted Fish Passage Barriers in the Lower/Middle Skeena, Bulkley, Morice, and Babine River Watersheds.",
@@ -257,6 +248,7 @@
   year   =  2020,
   publisher = "PSF"
 }
+
 
 @book{Porter2008-qd,
   title  = "Developing Fish Habitat Models for {Broad-Scale} Forest Planning in
@@ -373,7 +365,7 @@
   number    =  6,
   pages     = "1654--1669",
   month     =  nov,
-  year      =  2006
+  year      =  2003
 }
 
 @article{Schindler2003,
