--- a/content/barrier-prioritization.qmd
+++ b/content/barrier-prioritization.qmd
@@ -67,10 +67,10 @@ styled_df.set_table_styles(table_styles)
 ```
 
 
-After all existing data and knowledge are collated for known and modelled crossings, an iterative ranking process is conducted to help confirm barriers to target for rehabilitation to meet the goals. The ranking process is primarily used to guide field assessments and maximize efficiency in ground truthing data inputs and model outputs, while providing a secondary purpose to evaluate the relative key habitat gains of confirmed barriers in the watershed. This process, combined with input from local knowledge holders and experts, is used to develop field plans for assessing barriers that have the potential to block the most key habitat in the watershed.
+After all existing data and knowledge are collated for known and modelled crossings, an iterative ranking process is conducted to help identify barriers for rehabilitation to meet the WCRP goals. The ranking process is primarily used to guide field assessments and maximize efficiency in ground truthing data inputs and model outputs, while providing a secondary purpose to evaluate the relative key habitat gains of confirmed barriers in the watershed. This process, combined with input from local knowledge holders and experts, is used to develop field plans for assessing structures that have the potential to block the most key habitat in the watershed.
 Field assessments are based on the [BC Fish Passage Strategic Approach](https://www2.gov.bc.ca/assets/gov/environment/plants-animals-and-ecosystems/fish-fish-habitat/fish-passage/strategic20approach20july202014.pdf) and can include a barrier assessment (i.e., evaluating passability of the structure), a habitat confirmation (i.e., evaluation of whether the upstream habitat is suitable for the focal species and whether there are other undocumented anthropogenic or natural barriers upstream or downstream), or a detailed habitat investigation (e.g., a fish passage study or further in-depth analysis of habitat features in a waterbody).
 
-The ranking process accounts for the long-term and immediate potential habitat gains potentially offered by each structure to identify structures that maximize long-term and immediate potential to improve key habitat connectivity in the watershed. All structures in the watershed (excluding those confirmed as passable) are ranked in each iteration of the ranking process. Details of the ranking process used to guide field assessments can be found in  [Appendix B](supplimentary-information.qmd).
+The ranking process accounts for the long-term and immediate habitat gains potentially offered by each structure to improve key habitat connectivity in the watershed. All structures in the watershed (excluding those confirmed as passable) are ranked in each iteration of the ranking process. Details of the ranking process used to guide field assessments can be found in  [Appendix B](supplimentary-information.qmd).
 
 
 ## Structure Prioritization Results {-}
@@ -81,11 +81,11 @@ Following field assessments, structures are placed on one of five possible lists
 
 2.	Assessed structures that remain data deficient list – some form of field assessment has been completed on the structure, but further investigation is required to confirm either the passability status or presence/suitability of upstream habitat (see @tbl-datadeficient).
 
-3.	Rehabilitated barriers list – priority barriers that have been addressed (either through removal, replacement, or temporary fish passage improvement projects; see @tbl-rehabilitated) 
+3.	Rehabilitated barriers list – priority barriers that have been addressed either through removal, replacement, or temporary fish passage improvement projects (see @tbl-rehabilitated).
 
-4.	Non-actionable barriers list – the structure is confirmed to be a barrier to fish passage and have some amount/quality of habitat upstream, but the planning team will not identify actions to advance rehabilitation of the structure because of logistic considerations (e.g., financial costs), short habitat gain, or the upstream habitat is of poor quality or unsuitable in its present condition to support key life stages of the focal species [Appendix C](data-methods.qmd).
+4.	Non-actionable barriers list – the structure is confirmed to be a barrier to fish passage and have some amount/quality of habitat upstream, but the planning team will not identify actions to advance rehabilitation of the structure because of logistic considerations (e.g., financial costs), short habitat gain, or the upstream habitat is of poor quality or unsuitable in its present condition to support key life stages of the focal species ([Appendix C](data-methods.qmd)).
 
-5.	Excluded structures list – the structure is excluded from further consideration in subsequent ranking and work planning because the structure is confirmed passable (e.g., bridge), not present, or there is no key habitat upstream [Appendix C](data-methods.qmd).
+5.	Excluded structures list – the structure is excluded from further consideration in subsequent ranking and work planning because the structure is confirmed to bepassable, not present, or there is no key habitat upstream ([Appendix C](data-methods.qmd)).
 
 ```{r rehab, echo = FALSE, results = 'asis'}
 #| label: tbl-confirmed
