--- a/content/connectivity-status.qmd
+++ b/content/connectivity-status.qmd
@@ -13,7 +13,7 @@ warnings.filterwarnings('ignore')
 
 ## Connectivity Status Assessment {-}
 
-The planning team identified two Key Ecological Attributes (KEAs) to assess the current connectivity status of the watershed for each focal species – available spawning habitat and available rearing habitat (@tbl-connectivity). KEAs are the key aspects of anadromous salmon habitat that are being targeted by this WCRP. For each KEA, an associated indicator was assigned to measure the status of that KEA. The connectivity status indicators were used to establish goals to improve key habitat connectivity over time and is the baseline against which progress is tracked over time.
+The planning team identified two Key Ecological Attributes (KEAs) to assess the current connectivity status of the watershed for each focal species: available spawning habitat and available rearing habitat (@tbl-connectivity). KEAs are the key aspects of anadromous salmon habitat that are being targeted by this WCRP. For each KEA, an associated indicator was assigned to measure the status of that KEA. The connectivity status indicators were used to establish goals to improve key habitat connectivity over time and is the baseline against which progress is tracked over time.
 
 The current connectivity status was estimated using three spatial models:
 
@@ -35,7 +35,7 @@ df
 
 ```
 
-**Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the CWF Barrier Prioritization Model output, which is current as of December 2024.
+**Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the connectivity model output, which is current as of December 2024.
 
 ```{python echo=FALSE}
 #| warning: false
@@ -47,7 +47,7 @@ df
 
 ```
 
-**Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the CWF Structure Prioritization Model output, which is current as of December 2024. 
+**Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the connectivity model output, which is current as of December 2024. 
 
 
 ## Goals {-}
