--- a/content/project-overview.qmd
+++ b/content/project-overview.qmd
@@ -35,7 +35,7 @@ rail_sev <- api$rail_sev
 
 The following Watershed Connectivity Restoration Plan (WCRP) represents the culmination of a one-year collaborative planning effort for the Bulkley River watershed (excluding the Morice River, see Geographic Scope), the overall aim of which is to clarify and reduce the threat of aquatic barriers to anadromous salmonids and the livelihoods that they support, including the values and laws of First Nations, as well their continued sustenance, cultural, and ceremonial needs both now and into the future. This 10-year plan was developed to identify priority actions that the Bulkley River WCRP planning team (see @tbl-planteam for a list of team members) will undertake between 2021-2031 to conserve and restore fish passage in the watershed through strategies aimed at barrier rehabilitation, barrier prevention, and strengthening Indigenous connections to land and water.
 
-WCRPs are long-term, actionable plans that blend local stakeholder and rightsholder knowledge with innovative Geographical Information Systems (GIS) analyses to gain a shared understanding of where restoration efforts will have the greatest benefit for anadromous salmonids. The planning process is inspired by the [Conservation Standards](https://cmp-openstandards.org/wp-content/uploads/2020/07/CMP-Open-Standards-for-the-Practice-of-Conservation-v4.0.pdf) (v.4.0), which is a conservation planning framework that allows planning teams to systematically identify, implement, and monitor strategies to apply the most effective solutions to high priority conservation problems. There is a rich history of connectivity and fish passage planning and restoration work in the Bulkley River watershed that this WCRP builds upon, including the work undertaken by the BC Fish Passage Technical Working Group, the Skeena Fisheries Commission, the Office of the Wet’suwet’en, the Wet'suwet'en First Nation, and the Society for Ecosystem Restoration in Northern British Columbia (SERNbc) among others (@Wilson2007, @Mccarthy2015, @Smith2018, @Casselman, @Irvine2018). The Canadian Wildlife Federation will continue to engage and coordinate with local partners and existing initiatives, in part through the Skeena Environmental Stewardship Initiative. SERNbc is also currently undertaking [fish passage](https://www.newgraphenvironment.com/fish_passage_bulkley_2020_reporting/Bulkley.pdf) work in the Bulkley River watershed, with some overlap and some differences in scope compared to the work and processes described in this WCRP. The SERNbc project relies on expert knowledge and field assessments in both the Bulkley and Morice River watersheds to improve passage for all fish, including fluvial and resident species, and focuses on stream crossings that act as barriers (@Irvine2021). This WCRP focuses specifically on improving connectivity for anadromous salmonids and uses consensus-based planning exercises and spatial modelling to develop watershed-scale status assessments, goal setting, and prioritization for multiple structure types. SERNbc and the WCRP planning team are currently collaborating on the development of the [bcfishpass](https://github.com/smnorris/bcfishpass) connectivity model and will continue to work together to promote coordination and collaboration between the two initiatives.
+WCRPs are long-term, actionable plans that blend local stakeholder and rightsholder knowledge with innovative geographical information systems (GIS) analyses to gain a shared understanding of where restoration efforts will have the greatest benefit for anadromous salmonids. The planning process is inspired by the [Conservation Standards](https://cmp-openstandards.org/wp-content/uploads/2020/07/CMP-Open-Standards-for-the-Practice-of-Conservation-v4.0.pdf) (v.4.0), which is a conservation planning framework that allows planning teams to systematically identify, implement, and monitor strategies to apply the most effective solutions to high priority conservation problems. There is a rich history of connectivity and fish passage planning and restoration work in the Bulkley River watershed that this WCRP builds upon, including the work undertaken by the BC Fish Passage Technical Working Group, the Skeena Fisheries Commission, the Office of the Wet’suwet’en, the Wet'suwet'en First Nation, and the Society for Ecosystem Restoration in Northern British Columbia (SERNbc) among others (@Wilson2007, @Mccarthy2015, @Smith2018, @Casselman, @Irvine2018). The Canadian Wildlife Federation will continue to engage and coordinate with local partners and existing initiatives, in part through the Skeena Environmental Stewardship Initiative. SERNbc is also currently undertaking [fish passage](https://www.newgraphenvironment.com/fish_passage_bulkley_2020_reporting/Bulkley.pdf) work in the Bulkley River watershed, with some overlap and some differences in scope compared to the work and processes described in this WCRP. The SERNbc project relies on expert knowledge and field assessments in both the Bulkley and Morice River watersheds to improve passage for all fish, including fluvial and resident species, and focuses on stream crossings that act as barriers (@Irvine2021). This WCRP focuses specifically on improving connectivity for anadromous salmonids and uses consensus-based planning exercises and spatial modelling to develop watershed-scale status assessments, goal setting, and prioritization for multiple structure types. SERNbc and the WCRP planning team are currently collaborating on the development of the [bcfishpass](https://github.com/smnorris/bcfishpass) connectivity model and will continue to work together to promote coordination and collaboration between the two initiatives.
 
 The planning team compiled existing structure location and assessment data, habitat data, and previously identified priorities, and combined this with local and Indigenous knowledge to create a strategic watershed-scale plan to improve freshwater connectivity. To expand on this work, the Bulkley River WCRP planning team applied the WCRP planning framework to define the "thematic" scope of freshwater connectivity and refine the "geographic" scope to identify those portions of the watershed where structure prioritization will be conducted, and subsequent rehabilitation efforts will take place. Additionally, the team selected focal fish species, assessed the current key habitat connectivity status of the watershed, defined concrete goals for gains in connectivity, and undertook an iterative structure-ranking process to identify a list of priority barriers for rehabilitation to achieve those goals. While the current version of this plan is based on the best-available information at the time of publishing, WCRPs are intended to be “living plans” that are updated regularly as new information becomes available, or if local priorities and contexts change. As such, this document should be interpreted as a current “snap-shot” in time, and future iterations of this WCRP will build upon the material presented in this plan to continuously improve aquatic barrier rehabilitation for migratory fish in the Bulkley River watershed. For more information on how WCRPs are developed, see @Mazany-Wright2021-hs.
 
@@ -99,7 +99,7 @@ The Bulkley River watershed comprises parts of the traditional territories of tw
 
 - Wet’suwet’en peoples– the Wedzin Kwah (Bulkley River watershed) is part of the larger Wet’suwet’en traditional territory. The hereditary territory is governed by a system made up of five clans – Gilseyhu (Big Frog), Laksilyu (Small Frog), Tsayu (Beaver), Gitdumden (Wolf/Bear) and Laksamshu (Fireweed) – each of which comprises multiple Yikhs (House Groups) represented by hereditary chiefs. The Wet’suwet’en steward the land based on Inuk Nu’at’en (Wet'suwet'en law), and the principle of Yintahk, meaning everything is connected to the land (@OfficeWetsuweten2013, @Irvine2021). It is necessary to receive permission from the appropriate bands (Witset First Nation or Wet'suwet'en first Nation, Skin Tyee, Nee Tahi Buhn, or Burns Lake Band), nation representatives (@OfficeWetsuweten2013), and the individual Yikh chiefs for any work to occur on their territory.
 
-The geographic scope of this WCRP was further refined by identifying “naturally accessible" waterbodies, which are defined as waterbodies that focal species should be able to access in the absence of human-made structures (@fig-strseg). Naturally accessible waterbodies were spatially delineated using fish species observation and distribution data, as well as data on "natural barriers", which are waterfalls greater than 5 m in height and gradient barriers based on literature derived species-specific swimming abilities. These maps were explored by the planning team to incorporate additional local knowledge, ensure accuracy, and finalize the constraints on naturally accessible waterbodies. All other waterbodies were removed from the project scope. The "naturally accessible" waterbodies formed the foundation for all subsequent analyses and planning steps, including mapping and modelling useable habitat types, quantifying the current connectivity status, goal setting, and action planning @Mazany-Wright2021-rz. 
+The geographic scope of this WCRP was further refined by identifying “naturally accessible" waterbodies, which are defined as waterbodies that focal species should be able to access in the absence of human-made structures (@fig-strseg). Naturally accessible waterbodies were spatially delineated using fish species observation and distribution data, as well as data on "natural barriers", which are waterfalls greater than 5 m in height and gradient barriers based on literature derived, species-specific swimming abilities. These maps were explored by the planning team to incorporate additional local knowledge, ensure accuracy, and finalize the constraints on naturally accessible waterbodies. All other waterbodies were removed from the project scope. The "naturally accessible" waterbodies formed the foundation for all subsequent analyses and planning steps, including mapping and modelling useable habitat types, quantifying the current connectivity status, goal setting, and action planning @9Mazany-Wright2021-rz). 
 
 
 ![Naturally accessible waterbodies within the Bulkley River watershed. These do not represent useable habitat types, but rather identify the waterbodies within which habitat modelling and structure mapping and prioritization were undertaken.](images/accessible-streams-bulk.png){#fig-strseg}
@@ -114,7 +114,7 @@ Anadromous salmonids are cultural and ecological keystone species that contribut
 
 Anadromous salmonid populations in the Bulkley River watershed have declined significantly in recent decades, leading both the Gitxsan and Wet’suwet’en nations to declare harvest moratoriums or fishing bans in their territories (@OfficeWetsuweten2013, @Gitxsan2019). The stewardship of these resources in their territories are imbued in the spirit and culture of these nations through a symbiotic relationship with these fish species – threats to the fish are threats to the well-being of the Wet’suwet’en and Gitxsan peoples (@SSAF2021). The stewardship of their waters continues through the work of the [Gitksan Watershed Authorities](https://gitksanwatershed.com/) and the [Wet’suwet’en Fisheries Program](http://www.wetsuweten.com/departments/fisheries-and-wildlife/), as well as collaborative initiatives like the Skeena Environment Stewardship Initiative. 
 
-For the purpose of this WCRP, anadromous salmonid populations are defined using Fisheries and Oceans Canada's Conservation Units. CUs is a group of wild Pacific salmon sufficiently isolated from other groups that, if extirpated, is very unlikely to recolonize naturally within an acceptable timeframe, such as a human lifetime or a specified number of salmon generations. Conservation Units are not defined for steelhead; as such, there is no assessment information to provide for the Bulkley River watershed population.
+For the purpose of this WCRP, anadromous salmonid populations are defined using Fisheries and Oceans Canada's Conservation Units. A Conservation Unit (CU) is a group of wild Pacific salmon sufficiently isolated from other groups that, if extirpated, is very unlikely to recolonize naturally within an acceptable timeframe, such as a human lifetime or a specified number of salmon generations. CUs are not defined for steelhead; as such, there is no assessment information to provide for the Bulkley River watershed population.
 
 ### Chinook Salmon | Ya’aa | Ggïs| Oncorhynchus tshawytscha  {-}
 ```{python echo=FALSE}
@@ -261,7 +261,7 @@ The following table highlights which structure types pose the greatest threat to
 
 ```{python barriertype, echo=FALSE}
 #| label: tbl-barriertype
-#| tbl-cap: "Structure Types in the Bulkley River watershed and structure rating assessment results. For each structure type listed, Extent refers to the proportion of key habitat for focal species that is being blocked by that structure type, Severity is the proportion of structures for each structure type that are known to block passage for focal species based on field assessments, and Irreversibility is the degree to which the effects of a structure type can be reversed and connectivity restored. Key habitat for the purpose of this exercise is edfined as the total amount of combined spawning and rearing habitat."
+#| tbl-cap: "Structure Types in the Bulkley River watershed and structure rating assessment results. For each structure type listed, Extent refers to the proportion of key habitat for focal species that is being blocked by that structure type, Severity is the proportion of structures for each structure type that are known to block passage for focal species based on field assessments, and Irreversibility is the degree to which the effects of a structure type can be reversed and connectivity restored. Key habitat for the purpose of this exercise is defined as the total amount of combined spawning and rearing habitat."
 #| warning: false
 #| echo: false
 
