bulk-updates-dec4

--- a/content/project-overview.qmd
+++ b/content/project-overview.qmd
@@ -35,7 +35,7 @@ rail_sev <- api$rail_sev
 
 The following Watershed Connectivity Restoration Plan (WCRP) represents the culmination of a one-year collaborative planning effort for the Bulkley River watershed (excluding the Morice River, see Geographic Scope), the overall aim of which is to clarify and reduce the threat of aquatic barriers to anadromous salmonids and the livelihoods that they support, including the values and laws of First Nations, as well their continued sustenance, cultural, and ceremonial needs both now and into the future. This 10-year plan was developed to identify priority actions that the Bulkley River WCRP planning team (see @tbl-planteam for a list of team members) will undertake between 2021-2031 to conserve and restore fish passage in the watershed through strategies aimed at barrier rehabilitation, barrier prevention, and strengthening Indigenous connections to land and water.
 
-WCRPs are long-term, actionable plans that blend local stakeholder and rightsholder knowledge with innovative geographical information systems (GIS) analyses to gain a shared understanding of where restoration efforts will have the greatest benefit for anadromous salmonids. The planning process is inspired by the [Conservation Standards](https://cmp-openstandards.org/wp-content/uploads/2020/07/CMP-Open-Standards-for-the-Practice-of-Conservation-v4.0.pdf) (v.4.0), which is a conservation planning framework that allows planning teams to systematically identify, implement, and monitor strategies to apply the most effective solutions to high priority conservation problems. There is a rich history of connectivity and fish passage planning and restoration work in the Bulkley River watershed that this WCRP builds upon, including the work undertaken by the BC Fish Passage Technical Working Group, the Skeena Fisheries Commission, the Office of the Wet’suwet’en, the Wet'suwet'en First Nation, and the Society for Ecosystem Restoration in Northern British Columbia (SERNbc) among others (@Wilson2007, @Mccarthy2015, @Smith2018, @Casselman, @Irvine2018). The Canadian Wildlife Federation will continue to engage and coordinate with local partners and existing initiatives, in part through the Skeena Environmental Stewardship Initiative. SERNbc is also currently undertaking [fish passage](https://www.newgraphenvironment.com/fish_passage_bulkley_2020_reporting/Bulkley.pdf) work in the Bulkley River watershed, with some overlap and some differences in scope compared to the work and processes described in this WCRP. The SERNbc project relies on expert knowledge and field assessments in both the Bulkley and Morice River watersheds to improve passage for all fish, including fluvial and resident species, and focuses on stream crossings that act as barriers (@Irvine2021). This WCRP focuses specifically on improving connectivity for anadromous salmonids and uses consensus-based planning exercises and spatial modelling to develop watershed-scale status assessments, goal setting, and prioritization for multiple structure types. SERNbc and the WCRP planning team are currently collaborating on the development of the [bcfishpass](https://github.com/smnorris/bcfishpass) connectivity model and will continue to work together to promote coordination and collaboration between the two initiatives.
+WCRPs are long-term, actionable plans that blend local stakeholder and rightsholder knowledge with innovative geographical information systems (GIS) analyses to gain a shared understanding of where restoration efforts will have the greatest benefit for anadromous salmonids. The planning process is inspired by the [Conservation Standards](https://conservationstandards.org/wp-content/uploads/sites/3/2020/10/CMP-Open-Standards-for-the-Practice-of-Conservation-v4.0.pdf) (v.4.0), which is a conservation planning framework that allows planning teams to systematically identify, implement, and monitor strategies to apply the most effective solutions to high priority conservation problems. There is a rich history of connectivity and fish passage planning and restoration work in the Bulkley River watershed that this WCRP builds upon, including the work undertaken by the BC Fish Passage Technical Working Group, the Skeena Fisheries Commission, the Office of the Wet’suwet’en, the Wet'suwet'en First Nation, and the Society for Ecosystem Restoration in Northern British Columbia (SERNbc) among others (@Wilson2007, @Mccarthy2015, @Smith2018, @Casselman, @Irvine2018). The Canadian Wildlife Federation will continue to engage and coordinate with local partners and existing initiatives, in part through the Skeena Environmental Stewardship Initiative. SERNbc is also currently undertaking [fish passage](https://www.newgraphenvironment.com/fish_passage_bulkley_2020_reporting/Bulkley.pdf) work in the Bulkley River watershed, with some overlap and some differences in scope compared to the work and processes described in this WCRP. The SERNbc project relies on expert knowledge and field assessments in both the Bulkley and Morice River watersheds to improve passage for all fish, including fluvial and resident species, and focuses on stream crossings that act as barriers (@Irvine2021). This WCRP focuses specifically on improving connectivity for anadromous salmonids and uses consensus-based planning exercises and spatial modelling to develop watershed-scale status assessments, goal setting, and prioritization for multiple structure types. SERNbc and the WCRP planning team are currently collaborating on the development of the [bcfishpass](https://github.com/smnorris/bcfishpass) connectivity model and will continue to work together to promote coordination and collaboration between the two initiatives.
 
 The planning team compiled existing structure location and assessment data, habitat data, and previously identified priorities, and combined this with local and Indigenous knowledge to create a strategic watershed-scale plan to improve freshwater connectivity. To expand on this work, the Bulkley River WCRP planning team applied the WCRP planning framework to define the "thematic" scope of freshwater connectivity and refine the "geographic" scope to identify those portions of the watershed where structure prioritization will be conducted, and subsequent rehabilitation efforts will take place. Additionally, the team selected focal fish species, assessed the current key habitat connectivity status of the watershed, defined concrete goals for gains in connectivity, and undertook an iterative structure-ranking process to identify a list of priority barriers for rehabilitation to achieve those goals. While the current version of this plan is based on the best-available information at the time of publishing, WCRPs are intended to be “living plans” that are updated regularly as new information becomes available, or if local priorities and contexts change. As such, this document should be interpreted as a current “snap-shot” in time, and future iterations of this WCRP will build upon the material presented in this plan to continuously improve aquatic barrier rehabilitation for migratory fish in the Bulkley River watershed. For more information on how WCRPs are developed, see @Mazany-Wright2021-hs.
 
@@ -341,7 +341,7 @@ data.set_table_styles(
 
 Road-stream crossings are the most abundant structure type in the watershed, with `r sum_road` assessed and modelled crossings located on stream segments with modelled habitat. Demographic road crossings (highways, municipal, and paved roads) block `r demo_km` km of habitat (`r demo_pct`% of the total blocked habitat), with `r demo_sev`% of assessed crossings having been identified as barriers to fish passage. Resource roads block `r resource_km` km of habitat (`r resource_pct`%), with `r resource_sev`% of assessed crossings have been identified as barriers. Significant land use and linear development throughout the valley bottom has disconnected the Bulkley River from important habitat in many tributaries, including Highway 16 which represents one of the main drivers of fragmentation in the watershed (see @tbl-table16). The collective experience and input from the planning team resulted in a Medium irreversibility rating due to the technical complexity and resources required to rehabilitate road-stream crossings, though it was noted that this differs considerably between resource roads and highway crossings.
 
-### Rail-stream *Crossings*{-}
+### Rail-stream Crossings{-}
 
 There are relatively few rail-stream crossings in the watershed (`r sum_rail` crossings on "naturally accessible" waterbodies), but those that exist block significant amounts of habitat (`r rail_km` km or `r rail_pct`% of the total habitat blocked), with more than half of assessed crossings (`r rail_sev`%) acting as barriers to anadromous salmonids. All rail-stream crossings in the watershed are associated with the CN railway running along the Bulkley River. With significant financial costs, technical challenges, and stakeholder engagement required with CN to rehabilitate these barriers, the planning team decided on an overall pressure rating of High for this structure type.
 
