--- a/content/project-overview.qmd
+++ b/content/project-overview.qmd
@@ -99,7 +99,7 @@ The Bulkley River watershed comprises parts of the traditional territories of tw
 
 - Wet’suwet’en peoples– the Wedzin Kwah (Bulkley River watershed) is part of the larger Wet’suwet’en traditional territory. The hereditary territory is governed by a system made up of five clans – Gilseyhu (Big Frog), Laksilyu (Small Frog), Tsayu (Beaver), Gitdumden (Wolf/Bear) and Laksamshu (Fireweed) – each of which comprises multiple Yikhs (House Groups) represented by hereditary chiefs. The Wet’suwet’en steward the land based on Inuk Nu’at’en (Wet'suwet'en law), and the principle of Yintahk, meaning everything is connected to the land (@OfficeWetsuweten2013, @Irvine2021). It is necessary to receive permission from the appropriate bands (Witset First Nation or Wet'suwet'en first Nation, Skin Tyee, Nee Tahi Buhn, or Burns Lake Band), nation representatives (@OfficeWetsuweten2013), and the individual Yikh chiefs for any work to occur on their territory.
 
-The geographic scope of this WCRP was further refined by identifying “naturally accessible" waterbodies, which are defined as waterbodies that focal species should be able to access in the absence of human-made structures (@fig-strseg). Naturally accessible waterbodies were spatially delineated using fish species observation and distribution data, as well as data on "natural barriers", which are waterfalls greater than 5 m in height and gradient barriers based on literature derived, species-specific swimming abilities. These maps were explored by the planning team to incorporate additional local knowledge, ensure accuracy, and finalize the constraints on naturally accessible waterbodies. All other waterbodies were removed from the project scope. The "naturally accessible" waterbodies formed the foundation for all subsequent analyses and planning steps, including mapping and modelling useable habitat types, quantifying the current connectivity status, goal setting, and action planning @9Mazany-Wright2021-rz). 
+The geographic scope of this WCRP was further refined by identifying “naturally accessible" waterbodies, which are defined as waterbodies that focal species should be able to access in the absence of human-made structures (@fig-strseg). Naturally accessible waterbodies were spatially delineated using fish species observation and distribution data, as well as data on "natural barriers", which are waterfalls greater than 5 m in height and gradient barriers based on literature derived, species-specific swimming abilities. These maps were explored by the planning team to incorporate additional local knowledge, ensure accuracy, and finalize the constraints on naturally accessible waterbodies. All other waterbodies were removed from the project scope. The "naturally accessible" waterbodies formed the foundation for all subsequent analyses and planning steps, including mapping and modelling useable habitat types, quantifying the current connectivity status, goal setting, and action planning @Mazany-Wright2021-rz). 
 
 
 ![Naturally accessible waterbodies within the Bulkley River watershed. These do not represent useable habitat types, but rather identify the waterbodies within which habitat modelling and structure mapping and prioritization were undertaken.](images/accessible-streams-bulk.png){#fig-strseg}
@@ -159,7 +159,7 @@ data.set_table_styles(
 
 
 Chinook in the Middle Skeena – Mainstem Tributaries Chinook Salmon CU spawn in the mainstem Bulkley River downstream of the confluence with the Morice River and in key tributaries, including Telkwa River, Goathorn Creek, Howson Creek, Kathlyn Creek, Suskwa River, Harold Price Creek, and Natlan Creek. The Middle Skeena Mainstem Tributaries Chinook Salmon CU have seen a steep decline, particularly over the last three generations of spawners ([Pacific Salmon Explorer](https://www.salmonexplorer.ca/#!/pop=ABUNDANCE_TREND)).
-The upper Bulkley River Chinook Salmon CU (upstream of the confluence with the Morice River) are the first salmon to return in the year, usually early-to-mid June, marking the start of the salmon fishery in the watershed (@OfficeWetsuweten2013). The upper Bulkley River population is known to spawn in the mainstem and tributaries of the Bulkley River, including Buck Creek, Byman Creek, Richfield Creek, Maxan Creek, and Foxy Creek. In some years, low water flows prevent adult Chinook Salmon from migrating past Bulkley Falls near Moricetown. The upper Bulkley River Chinook Salmon CU is in decline and is threatened, in part, by habitat degradation, including linear development (e.g., highway, rail, and road infrastructure) that fragments tributaries (@OfficeWetsuweten2013, [Pacific Salmon Explorer](https://www.salmonexplorer.ca/#!/pop=ABUNDANCE_TREND)).
+The upper Bulkley River Chinook Salmon CU (upstream of the confluence with the Morice River) are the first salmon to return in the year, usually early-to-mid June, marking the start of the salmon fishery in the watershed (@OfficeWetsuweten2013). The upper Bulkley River population is known to spawn in the mainstem and tributaries of the Bulkley River, including Buck Creek, Byman Creek, Richfield Creek, Maxan Creek, and Foxy Creek. In some years, low water flows prevent adult Chinook Salmon from migrating past Bulkley Falls near Moricetown. The upper Bulkley River Chinook Salmon CU is in decline and is threatened, in part, by habitat degradation, including linear development (e.g., highway, rail, and road infrastructure) that fragments tributaries (@OfficeWetsuweten2013).
 
 
 ### Coho Salmon | Eek | Deedzex | Oncorhynchus kisutch {-}
@@ -204,7 +204,7 @@ data.set_table_styles(
 
 ```
 
-Coho Salmon are the most widely dispersed anadromous salmonid species in the Bulkley River watershed due to their ability to move into smaller tributaries, including headwater streams. Coho Salmon spawning migration peaks in early-to-mid August, though traditionally the main Coho Salmon fishery occurs later in the season (@OfficeWetsuweten2013,[Pacific Salmon Explorer](https://www.salmonexplorer.ca/#!/pop=ABUNDANCE_TREND)). Spawning and rearing of the Middle Skeena CU is known to occur within the watershed in the mainstem channels of the Bulkley, Telkwa, and Suskwa rivers, and key tributaries, including Buck Creek, Aitken Creek, McQuarrie Creek, Byman Creek, Richfield Creek, Ailport Creek, and Maxan Creek. In recent decades, Coho Salmon distribution has often been limited to areas downstream of Bulkley Falls, but in years with sufficient flow, tributaries upstream of the falls are well-used by rearing juveniles (M. Ridsale pers. comm.). The Coho Salmon population in the watershed appeared to begin recovering around 1998 but has since declined over the last three generations of spawners (@OfficeWetsuweten2013, Pacific Salmon Explorer). Additionally, since 1989, tens of thousands of Coho Salmon fry have been released into the upper Bulkley River mainstem from the Toboggan Hatchery on Toboggan Creek (@OfficeWetsuweten2013).
+Coho Salmon are the most widely dispersed anadromous salmonid species in the Bulkley River watershed due to their ability to move into smaller tributaries, including headwater streams. Coho Salmon spawning migration peaks in early-to-mid August, though traditionally the main Coho Salmon fishery occurs later in the season (@OfficeWetsuweten2013). Spawning and rearing of the Middle Skeena CU is known to occur within the watershed in the mainstem channels of the Bulkley, Telkwa, and Suskwa rivers, and key tributaries, including Buck Creek, Aitken Creek, McQuarrie Creek, Byman Creek, Richfield Creek, Ailport Creek, and Maxan Creek. In recent decades, Coho Salmon distribution has often been limited to areas downstream of Bulkley Falls, but in years with sufficient flow, tributaries upstream of the falls are well-used by rearing juveniles (M. Ridsale pers. comm.). The Coho Salmon population in the watershed appeared to begin recovering around 1998 but has since declined over the last three generations of spawners (@OfficeWetsuweten2013). Additionally, since 1989, tens of thousands of Coho Salmon fry have been released into the upper Bulkley River mainstem from the Toboggan Hatchery on Toboggan Creek (@OfficeWetsuweten2013).
 
 ### Sockeye Salmon | Mi’soo | Taalook | Oncorhynchus nerka {-}
 
@@ -248,7 +248,7 @@ data.set_table_styles(
 
 ```
 
-Sockeye Salmon have cultural and commercial importance within the watershed, especially for First Nations communities, in part due to their fat content which is optimal for the smoke-drying process. Limitations on the Sockeye Salmon harvest in the watershed have hindered the ability of the Wet’suwet’en and Gitxsan to practice important cultural activities and the associated sharing of oral traditions and histories (@SSAF2021, @OfficeWetsuweten2013). The Sockeye Salmon runs generally follow the spring Chinook Salmon migrations in the Bulkley River system, but Bulkley Falls and flows in some parts of Maxan Creek can limit migration during low-flow years. Data are insufficient for population assessments; however, it is believed that the Bulkley/Maxan populations are at risk of extirpation. There are two Sockeye Salmon populations present in the watershed with distinct life histories – the lake-type and the river-type (@OfficeWetsuweten2013, [Pacific Salmon Explorer](https://www.salmonexplorer.ca/#!/pop=ABUNDANCE_TREND)). Two lake-type Sockeye Salmon sub-populations spawn and rear in and around Bulkley Lake and Maxan Lake, and a third lake-type sub-population was extirpated from Toboggan Lake. River-type Sockeye distribution and habitat use within the Bulkley River watershed is not well documented; however, there are records of Sockeye Salmon river spawners in the mainstem Bulkley River around Richfield Creek, McQuarrie Creek, the Morice River confluence, and the Suskwa River mainstem near Natlan Creek.
+Sockeye Salmon have cultural and commercial importance within the watershed, especially for First Nations communities, in part due to their fat content which is optimal for the smoke-drying process. Limitations on the Sockeye Salmon harvest in the watershed have hindered the ability of the Wet’suwet’en and Gitxsan to practice important cultural activities and the associated sharing of oral traditions and histories (@SSAF2021, @OfficeWetsuweten2013). The Sockeye Salmon runs generally follow the spring Chinook Salmon migrations in the Bulkley River system, but Bulkley Falls and flows in some parts of Maxan Creek can limit migration during low-flow years. Data are insufficient for population assessments; however, it is believed that the Bulkley/Maxan populations are at risk of extirpation. There are two Sockeye Salmon populations present in the watershed with distinct life histories – the lake-type and the river-type (@OfficeWetsuweten2013). Two lake-type Sockeye Salmon sub-populations spawn and rear in and around Bulkley Lake and Maxan Lake, and a third lake-type sub-population was extirpated from Toboggan Lake. River-type Sockeye distribution and habitat use within the Bulkley River watershed is not well documented; however, there are records of Sockeye Salmon river spawners in the mainstem Bulkley River around Richfield Creek, McQuarrie Creek, the Morice River confluence, and the Suskwa River mainstem near Natlan Creek.
 
 ### Steelhead | Milit | Tësdlï | Oncorhynchus mykiss {-}
 Steelhead migrations coincide with the arrival of Coho Salmon in the watershed and are an important traditional food source to augment winter stores (@OfficeWetsuweten2013). Steelhead are known to spawn and rear in the mainstem Bulkley River and important tributaries, including the Telkwa River, Hubert Creek, Buck Creek, McQuarrie Creek, Byman Creek, Richfield Creek, Ailport Creek, Johnny David Creek, and Robert Hatch Creek. In the lower part of the watershed, steelhead are known to spawn and rear throughout the Suskwa River system, all the way up through Harold Price Creek and Blunt Creek. Local knowledge indicates that steelhead populations have been declining in recent decades and are currently in poor condition throughout the entire watershed. In response, some stocking enhancement actions has been undertaken in an attempt to increase the population in the watershed (@OfficeWetsuweten2013, @Chudyk1979).
